--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         }
         .container {
           
-          width: 800px;
+          width: 100%;
           margin: 20px auto;
           padding: 20px;
           
